--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ os:
 env:
   jobs:
     - TORCH_VERSION=1.4.0 PYTHON_VERSION=3.7 IDX=cpu
+    - TORCH_VERSION=1.5.0 PYTHON_VERSION=3.7 IDX=cpu
 
 install:
   - source script/conda.sh
