--- a/.travis.yml
+++ b/.travis.yml
@@ -7,13 +7,13 @@ os:
 
 env:
   jobs:
-    - TORCH_VERSION=1.5.0 PYTHON_VERSION=3.7 IDX=cpu
+    - TORCH_VERSION=1.5.0 TORCHVISION_VERSION=0.6.0 PYTHON_VERSION=3.7 IDX=cpu
 
 install:
   - source script/conda.sh
   - conda create --yes -n test python="${PYTHON_VERSION}"
   - source activate test
-  - conda install pytorch=${TORCH_VERSION} torchvision=0.6.1 ${TOOLKIT} -c pytorch --yes
+  - conda install pytorch==${TORCH_VERSION} torchvision=={$TORCHVISION_VERSION} ${TOOLKIT} -c pytorch --yes
   - pip install torch-scatter==latest+${IDX} -f https://pytorch-geometric.com/whl/torch-${TORCH_VERSION}.html
   - pip install torch-sparse==latest+${IDX} -f https://pytorch-geometric.com/whl/torch-${TORCH_VERSION}.html
   - pip install torch-cluster==latest+${IDX} -f https://pytorch-geometric.com/whl/torch-${TORCH_VERSION}.html
