--- a/.travis.yml
+++ b/.travis.yml
@@ -22,11 +22,12 @@ install:
   - pip install cython
   - git clone https://github.com/the-virtual-brain/tvb-geodesic /tmp/gdist
   - cd /tmp/gdist && python setup.py install && cd -
+  - pip install numba
   - pip install scikit-image
   - pip install trimesh
   - pip install flake8 codecov
   - pip install sphinx sphinx_rtd_theme
-  - pip install .[test]
+  - python setup.py install
 script:
   - flake8 .
   - python setup.py test
