--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,6 @@ os:
 
 env:
   jobs:
-    - TORCH_VERSION=1.5.0 TORCHVISION_VERSION=0.6.0 PYTHON_VERSION=3.6 IDX=cpu
     - TORCH_VERSION=1.6.0 TORCHVISION_VERSION=0.7.0 PYTHON_VERSION=3.6 IDX=cpu
     - TORCH_VERSION=1.7.0 TORCHVISION_VERSION=0.8.1 PYTHON_VERSION=3.6 IDX=cpu
 
@@ -20,6 +19,7 @@ install:
   - pip install torch-cluster -f https://pytorch-geometric.com/whl/torch-${TORCH_VERSION}+${IDX}.html
   - pip install torch-spline-conv -f https://pytorch-geometric.com/whl/torch-${TORCH_VERSION}+${IDX}.html
   - pip install cython
+  - pip install llvmlite
   - git clone https://github.com/the-virtual-brain/tvb-geodesic /tmp/gdist
   - cd /tmp/gdist && python setup.py install && cd -
   - pip install scikit-image
