gin lightning example

--- a/.gitignore
+++ b/.gitignore
@@ -6,13 +6,14 @@ alpha/
 runs/
 .cache/
 .eggs/
+lightning_logs/
 *.egg-info/
 .coverage
 .coverage.*
 .vscode
 .idea
+.venv
 *.out
 
 !torch_geometric/data/
 !test/data/
-.venv
