--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -4,5 +4,5 @@ https://download.pytorch.org/whl/cpu/torch-1.4.0%2Bcpu-cp37-cp37m-linux_x86_64.w
 https://pytorch-geometric.com/whl/torch-1.4.0%2Bcpu/torch_scatter-2.0.4-cp37-cp37m-linux_x86_64.whl
 https://pytorch-geometric.com/whl/torch-1.4.0%2Bcpu/torch_sparse-0.6.1-cp37-cp37m-linux_x86_64.whl
 numba==0.50.1
-sphinx>=3
+sphinx==3.4.3
 sphinx_rtd_theme
