--- a/.travis.yml
+++ b/.travis.yml
@@ -14,10 +14,10 @@ install:
   - conda create --yes -n test python="${PYTHON_VERSION}"
   - source activate test
   - conda install pytorch==${TORCH_VERSION} torchvision==${TORCHVISION_VERSION} ${TOOLKIT} -c pytorch --yes
-  - pip install torch-scatter -f https://pytorch-geometric.com/whl/torch-${TORCH_VERSION}+${IDX}.html
-  - pip install torch-sparse -f https://pytorch-geometric.com/whl/torch-${TORCH_VERSION}+${IDX}.html
-  - pip install torch-cluster -f https://pytorch-geometric.com/whl/torch-${TORCH_VERSION}+${IDX}.html
-  - pip install --verbose torch-spline-conv -f https://pytorch-geometric.com/whl/torch-${TORCH_VERSION}+${IDX}.html
+  - pip install --no-index torch-scatter -f https://pytorch-geometric.com/whl/torch-${TORCH_VERSION}+${IDX}.html
+  - pip install --no-index torch-sparse -f https://pytorch-geometric.com/whl/torch-${TORCH_VERSION}+${IDX}.html
+  - pip install --no-index torch-cluster==1.5.8 -f https://pytorch-geometric.com/whl/torch-${TORCH_VERSION}+${IDX}.html
+  - pip install --no-index torch-spline-conv -f https://pytorch-geometric.com/whl/torch-${TORCH_VERSION}+${IDX}.html
   - pip install cython
   - git clone https://github.com/the-virtual-brain/tvb-geodesic /tmp/gdist
   - cd /tmp/gdist && python setup.py install && cd -
