--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ install:
   - conda install pytorch==${TORCH_VERSION} torchvision==${TORCHVISION_VERSION} ${TOOLKIT} -c pytorch --yes
   - pip install torch-scatter -f https://pytorch-geometric.com/whl/torch-${TORCH_VERSION}+${IDX}.html
   - pip install torch-sparse -f https://pytorch-geometric.com/whl/torch-${TORCH_VERSION}+${IDX}.html
-  - pip install torch-cluster==1.5.8 -f https://pytorch-geometric.com/whl/torch-${TORCH_VERSION}+${IDX}.html
+  - pip install torch-cluster -f https://pytorch-geometric.com/whl/torch-${TORCH_VERSION}+${IDX}.html
   - pip install torch-spline-conv -f https://pytorch-geometric.com/whl/torch-${TORCH_VERSION}+${IDX}.html
   - pip install cython
   - git clone https://github.com/the-virtual-brain/tvb-geodesic /tmp/gdist
