--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ install:
   - pip install flake8 codecov
   - pip install sphinx==3.4.3 sphinx_rtd_theme
   - pip install pandas==1.1.5
+  - pip install h5py==3.1.0
   - python setup.py install
 script:
   - flake8 .
