--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ install:
   - pip install pandas==1.1.5
   - pip install h5py==3.1.0
   - pip install numba
-  - pip install -e .
+  - pip install -e .[test]
 script:
   - flake8 .
   - python setup.py test
