--- a/.github/workflows/test-base.yml
+++ b/.github/workflows/test-base.yml
@@ -1,18 +1,34 @@
 name: Run Basic Tests
-on: [push]
-jobs:
-  doctest:
-    runs-on: ubuntu-latest
-    steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
-      - name: Check out repository code
-        uses: actions/checkout@v2
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - name: List files in the repository
-        run: |
-          ls ${{ github.workspace }}
-      - run: echo "🍏 This job's status is ${{ job.status }}."
 
+on:
+  push:
+    brances: [ $default-branch ]
+  pull_request:
+    brances: [ $default-branch ]
+
+jobs:
+
+  pytest:
+
+    runs-on: ${{ matrix.os }}
+
+    strategy:
+      os: [ubuntu-latest, windows-latest]
+      python-version: [3.6]
+      torch-version: [1.7.0, 1.8.0]
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Update pip
+        run: |
+          pip install --upgrade pip
+
+      - name: Install dependencies
+        run: |
+          python --version
+          pip --version
