--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -39,8 +39,8 @@ jobs:
         with:
           path: ${{ steps.pip-cache.outputs.dir }}
           key: ${{ runner.os }}-pip-py${{ matrix.python-version }}-torch==${{ matrix.torch-version }}
-        restore-keys: |
-          ${{ runner.os }}-pip-py${{ matrix.python-version }}-torch==${{ matrix.torch-version }}
+          restore-keys: |
+            ${{ runner.os }}-pip-py${{ matrix.python-version }}-torch==${{ matrix.torch-version }}
 
       - name: Install PyTorch ${{ matrix.torch-version }}
         run: |
@@ -55,4 +55,5 @@ jobs:
 
       - name: Run test-suite
         run: |
+          pip install pytest
           pytest
