--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -55,4 +55,4 @@ jobs:
         run: |
           pip install pytest
           pip install pytest-cov
-          pytest
+          python setup.py test
