--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -28,6 +28,7 @@ jobs:
       - name: Update pip
         run: |
           pip install --upgrade pip
+          python -c "from pip._internal.locations import USER_CACHE_DIR; print('::set-output name=dir::' + USER_CACHE_DIR)"
 
       - name: Get pip cache
         id: pip-cache
@@ -50,6 +51,14 @@ jobs:
           pip install torch-sparse -f https://pytorch-geometric.com/whl/torch-${{ matrix.torch-version }}+cpu.html
           pip install torch-cluster -f https://pytorch-geometric.com/whl/torch-${{ matrix.torch-version }}+cpu.html
           pip install torch-spline-conv -f https://pytorch-geometric.com/whl/torch-${{ matrix.torch-version }}+cpu.html
+          pip install cython
+          pip install scikit-image
+          pip install trimesh
+          pip install pandas
+          pip install h5py
+          pip install numba
+          git clone https://github.com/the-virtual-brain/tvb-geodesic /tmp/gdist
+          pip install /tmp/gdist
 
       - name: Run test-suite
         run: |
