--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -65,7 +65,7 @@ jobs:
           pip install pandas
           pip install h5py
           pip install numba
-          git clone https://github.com/the-virtual-brain/tvb-geodesic /tmp/gdist && pip install /tmp/gdist
+          pip install git+https://github.com/the-virtual-brain/tvb-geodesic.git
 
       - name: Install test dependencies
         run: |
