--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -9,7 +9,7 @@ on:
 jobs:
 
   test:
-
+    name: Test on ${{ runner.os }}/Python ${{ matrix.python-version }}/PyTorch ${{ matrix.pytorch-version }}
     runs-on: ${{ matrix.os }}
 
     strategy:
