--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -70,3 +70,15 @@ jobs:
       - name: Run test-suite
         run: |
           python setup.py test
+
+      - name: Generate statistics
+        if: success()
+        run: |
+          pip install coverage
+          coverage xml
+
+      - name: Upload coverage to codecov
+            uses: codecov/codecov-action@v1
+            if: sucess()
+            with:
+              file: coverage.xml
