--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -79,6 +79,6 @@ jobs:
 
       - name: Upload coverage to codecov
         uses: codecov/codecov-action@v1
-        if: sucess()
+        if: success()
         with:
           file: coverage.xml
