--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -60,6 +60,7 @@ jobs:
           pip install pandas
           pip install h5py
           pip install numba
+          pip install tabulate
           pip install git+https://github.com/the-virtual-brain/tvb-geodesic.git
 
       - name: Install main package
