--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -10,13 +10,13 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
-        python-version: [3.6]
-        torch-version: [1.7.0, 1.8.0]
+        python-version: [3.6, 3.9]
+        torch-version: [1.8.0, 1.9.0]
         include:
-          - torch-version: 1.7.0
-            torchvision-version: 0.8.1
           - torch-version: 1.8.0
             torchvision-version: 0.9.0
+          - torch-version: 1.9.0
+            torchvision-version: 0.10.0
 
     steps:
       - uses: actions/checkout@v2
