--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,8 +1,6 @@
 numpy
-cython
-https://download.pytorch.org/whl/cpu/torch-1.4.0%2Bcpu-cp37-cp37m-linux_x86_64.whl
-https://pytorch-geometric.com/whl/torch-1.4.0%2Bcpu/torch_scatter-2.0.4-cp37-cp37m-linux_x86_64.whl
-https://pytorch-geometric.com/whl/torch-1.4.0%2Bcpu/torch_sparse-0.6.1-cp37-cp37m-linux_x86_64.whl
-numba==0.50.1
-sphinx==3.5.3
-sphinx_rtd_theme==0.5.2
+https://download.pytorch.org/whl/cpu/torch-1.9.0%2Bcpu-cp39-cp39m-linux_x86_64.whl
+https://pytorch-geometric.com/whl/torch-1.9.0%2Bcpu/torch_scatter-2.0.7-cp39-cp39m-linux_x86_64.whl
+https://pytorch-geometric.com/whl/torch-1.9.0%2Bcpu/torch_sparse-0.6.10-cp39-cp39m-linux_x86_64.whl
+sphinx
+sphinx_rtd_theme
