--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -52,4 +52,4 @@ jobs:
 
       - name: Build documentation
         run: |
-          cd docs && make clean && make html
+          cd docs && make clean && make html SPHINXOPTS="-W"  # Fail on warning.
