--- a/conda/torch-geometric/meta.yaml
+++ b/conda/torch-geometric/meta.yaml
@@ -2,13 +2,27 @@ package:
   name: torch-geometric
   version: 1.7.1
 
+source:
+  git_url: https://github.com/rusty1s/pytorch_geometric.git
+  git_rev: 1.7.1
+
+build:
+  noarch: python
+
 requirements:
-  build:
+  host:
     - python
     - pip
-    - setuptools
+    - pytorch
+    - pytest-runner
   run:
     - python
+    - pytorch
+
+test:
+  imports:
+    - torch_scatter
+    - torch_geometric
 
 about:
   home: https://github.com/rusty1s/pytorch_geometric
