--- a/conda/pytorch-geometric/meta.yaml
+++ b/conda/pytorch-geometric/meta.yaml
@@ -7,6 +7,7 @@ source:
 
 requirements:
   host:
+    - pip
     - python
 
   run:
@@ -27,7 +28,7 @@ test:
 
 build:
   noarch: python
-  script: pyton setup.py install
+  script: python setup.py install
 
 about:
   home: https://github.com/rusty1s/pytorch_geometric
