--- a/.github/workflows/building-conda.yml
+++ b/.github/workflows/building-conda.yml
@@ -11,7 +11,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-16.04] #, macos-10.15, windows-latest]
-        python-version: [3.6 #], 3.7, 3.8, 3.9]
+        python-version: [3.6] #, 3.7, 3.8, 3.9]
         torch-version: [1.8.0] #, 1.9.0]
         cuda-version: ['cpu'] #, 'cu101', 'cu102', 'cu111']
         exclude:
@@ -41,7 +41,7 @@ jobs:
 
       - name: Build Conda package
         run: |
-          ./conda/pytorch-spline-conv/build_conda.sh ${{ matrix.python-version }} ${{ matrix.torch-version }} ${{ matrix.cuda-version }}
+          ./conda/pytorch-geometric/build_conda.sh ${{ matrix.python-version }} ${{ matrix.torch-version }} ${{ matrix.cuda-version }}
         shell:
           bash -l {0}
 
