--- a/.github/workflows/building-conda.yml
+++ b/.github/workflows/building-conda.yml
@@ -50,6 +50,6 @@ jobs:
           conda install anaconda-client --yes
           anaconda upload --force --label main $HOME/conda-bld/*/*.tar.bz2
         env:
-          ANACONDA_API_TOKEN: ${{ secrets.ANACONDA_TOKEN }}
+          ANACONDA_API_TOKEN: ${{ secrets.CONDA_TOKEN }}
         shell:
           bash -l {0}
