recursive-include *.jinja files

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,7 @@
 include README.md
 include LICENSE
-include torch_geometric/nn/conv/message_passing.jinja
+
+recursive-include torch_geometric *.jinja
 
 recursive-exclude test *
 recursive-exclude examples *
