--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -41,8 +41,8 @@ jobs:
 
       - name: Install internal dependencies
         run: |
-          pip install torch-scatter -f https://pytorch-geometric.com/whl/torch-${{ matrix.torch-version }}+cpu.html
-          pip install torch-sparse -f https://pytorch-geometric.com/whl/torch-${{ matrix.torch-version }}+cpu.html
+          pip install torch-scatter -f https://data.pyg.org/whl/torch-${{ matrix.torch-version }}+cpu.html
+          pip install torch-sparse -f https://data.pyg.org/whl/torch-${{ matrix.torch-version }}+cpu.html
           pip install sphinx
           pip install sphinx_rtd_theme
 
